--- a/views/components/bodyMain.pug
+++ b/views/components/bodyMain.pug
@@ -222,6 +222,8 @@ body.is-preload
               a(href="https://html5up.net") HTML5 UP
               | .
     // Scripts
+    script(src="https://code.jquery.com/jquery-3.3.1.min.js",integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=",crossorigin="anonymous")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/bowser/1.9.3/bowser.min.js", crossorigin="anonymous")
     //- script(src="assets/js/jquery.min.js")
     //- script(src="assets/js/browser.min.js")
     //- script(src="assets/js/breakpoints.min.js")
