updated summery skill section

--- a/styles/components/_image.scss
+++ b/styles/components/_image.scss
@@ -72,3 +72,12 @@
 			}
 		}
 	}
+
+	.myImg{
+		width: 350px;
+		height: 400px;
+		object-fit: cover;
+		border-radius: 5px;
+		margin-left: 80px;
+		margin-right: 80px;
+	}
