--- a/views/components/bodyMain.pug
+++ b/views/components/bodyMain.pug
@@ -7,18 +7,12 @@ body.is-preload
           // Header
           header#header
             a.logo(href="index.html")
-              strong Editorial
-              |  by HTML5 UP
+              strong About
+              |  Yagnik
             ul.icons
-              li
-                a.icon.fa-twitter(href="#")
-                  span.label Twitter
               li
                 a.icon.fa-facebook(href="#")
                   span.label Facebook
-              li
-                a.icon.fa-snapchat-ghost(href="#")
-                  span.label Snapchat
               li
                 a.icon.fa-instagram(href="#")
                   span.label Instagram
@@ -30,50 +24,76 @@ body.is-preload
             .content
               header
                 h1
-                  | Hi, I’m Editorial
-                  br
-                  | 											by HTML5 UP
-                p A free and fully responsive site template
+                  | Hi, I'm Yagnik 
+                p Enthusiastic | Impactfull | Problem solver
               p
                 | Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.
-              ul.actions
-                li
-                  a.button.big(href="#") Learn More
-            span.image.object
-              img(src="../img/pic10.jpg" alt="")
-          // Section
+              //- ul.actions
+              //-   li
+              //-     a.button.big(href="#") Learn More
+            span
+              img.myImg(src="../img/myImg.png" alt="myImage")
+          
+          // Section  
           section
             header.major
-              h2 Erat lacinia
+              h2 Summery Of Skills
             .features
               article
                 span.icon.fa-diamond
-                .content
-                  h3 Portitor ullamcorper
-                  p
-                    | Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
+                .content.summery
+                  h3 Software
+                  ul  
+                    li 
+                      strong Programming Language: 
+                    p Javascript, C/C++, JAVA, C#, Python, Swift 4, WEB/ARM/x86 assembly, Perl, HTML, CSS
+                    li 
+                      strong Framework/Platforms:
+                    p AngularJS, Angular2+, React, React Native, Node, Express, .NET
+                    li 
+                      strong Database:
+                    p Elastic (ELK stack), SQL, NoSQL, mongoDB, PostgreSQL 
+                    li 
+                      strong Automations: 
+                    p Webpack, Gulp, Travis CLI, Jenkins, Powershell/Bash scripting, Selenium
+                    li 
+                      strong Cloud services:
+                    p AWS, IBM Bluemix, Azure, Heroku 
+                    li 
+                      strong Servers: 
+                    p ngix, Appache tomcat
+                    li 
+                      strong Others: 
+                    p RESt, GraphQL, Data Structures and Algorithms, Multi Threading
+
               article
                 span.icon.fa-paper-plane
                 .content
-                  h3 Sapien veroeros
+                  h3 Hardware
                   p
                     | Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
               article
                 span.icon.fa-rocket
                 .content
-                  h3 Quam lorem ipsum
+                  h3 Project Managment
                   p
                     | Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
               article
                 span.icon.fa-signal
                 .content
-                  h3 Sed magna finibus
+                  h3 Others
                   p
                     | Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
+          //Section for work experince
+          section
+            header.major
+              h2 Proffesional Work Experince
+              .row
+
           // Section
           section
             header.major
-              h2 Ipsum sed dolor
+              h2 Projects
             .posts
               article
                 a.image(href="#")
