--- a/styles/main.scss
+++ b/styles/main.scss
@@ -60,3 +60,10 @@
 	@import 'layout/banner';
 	@import 'layout/footer';
 	@import 'layout/menu';
+
+	//general css
+	.summery p{
+		padding: 0px;
+		padding-left: 8px;
+		margin-bottom: 2px;
+	}
