--- a/views/components/bodyMain.pug
+++ b/views/components/bodyMain.pug
@@ -60,11 +60,8 @@ body.is-preload
                       strong Cloud services:
                     p AWS, IBM Bluemix, Azure, Heroku 
                     li 
-                      strong Servers: 
-                    p ngix, Appache tomcat
-                    li 
                       strong Others: 
-                    p RESt, GraphQL, Data Structures and Algorithms, Multi Threading
+                    p RESt, GraphQL, ngix, Appache tomcat, Data Structures and Algorithms, Multi Threading
 
               article
                 span.icon.fa-paper-plane
