Fixed padding for hardware skills

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -62,8 +62,10 @@
 	@import 'layout/menu';
 
 	//general css
-	.summery p{
-		padding: 0px;
-		padding-left: 8px;
-		margin-bottom: 2px;
+	.summery {
+		p{
+			padding: 0px;
+			padding-left: 8px;
+			margin-bottom: 2px;
+		}
 	}
