--- a/views/components/bodyMain.pug
+++ b/views/components/bodyMain.pug
@@ -65,10 +65,27 @@ body.is-preload
 
               article
                 span.icon.fa-paper-plane
-                .content
+                .content.summery
                   h3 Hardware
-                  p
-                    | Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
+                  ul  
+                    li 
+                      strong Programming Language: 
+                    p Javascript, C/C++, JAVA, C#, Python, Swift 4, WEB/ARM/x86 assembly, Perl, HTML, CSS
+                    li 
+                      strong Framework/Platforms:
+                    p AngularJS, Angular2+, React, React Native, Node, Express, .NET
+                    li 
+                      strong Database:
+                    p Elastic (ELK stack), SQL, NoSQL, mongoDB, PostgreSQL 
+                    li 
+                      strong Automations: 
+                    p Webpack, Gulp, Travis CLI, Jenkins, Powershell/Bash scripting, Selenium
+                    li 
+                      strong Cloud services:
+                    p AWS, IBM Bluemix, Azure, Heroku 
+                    li 
+                      strong Others: 
+                    p RESt, GraphQL, ngix, Appache tomcat, Data Structures and Algorithms, Multi Threading
               article
                 span.icon.fa-rocket
                 .content
