Added Hardware skills

--- a/views/components/bodyMain.pug
+++ b/views/components/bodyMain.pug
@@ -46,7 +46,7 @@ body.is-preload
                   ul  
                     li 
                       strong Programming Language: 
-                    p Javascript, C/C++, JAVA, C#, Python, Swift 4, WEB/ARM/x86 assembly, Perl, HTML, CSS
+                    p Javascript, C/C++, JAVA, C#, Python, Swift 4, WEB assembly, Perl, HTML, CSS
                     li 
                       strong Framework/Platforms:
                     p AngularJS, Angular2+, React, React Native, Node, Express, .NET
@@ -61,7 +61,7 @@ body.is-preload
                     p AWS, IBM Bluemix, Azure, Heroku 
                     li 
                       strong Others: 
-                    p RESt, GraphQL, ngix, Appache tomcat, Data Structures and Algorithms, Multi Threading
+                    p RESt, GraphQL, ngix, Appache tomcat, Data Structures and Algorithms, Multi Threading, Dynatrace
 
               article
                 span.icon.fa-paper-plane
@@ -69,23 +69,19 @@ body.is-preload
                   h3 Hardware
                   ul  
                     li 
-                      strong Programming Language: 
-                    p Javascript, C/C++, JAVA, C#, Python, Swift 4, WEB/ARM/x86 assembly, Perl, HTML, CSS
+                      strong Firmware programming: 
+                    p C, BG SCRIPT(BGM111 BLE chip), ARM/x86 assembly, Rust
                     li 
-                      strong Framework/Platforms:
-                    p AngularJS, Angular2+, React, React Native, Node, Express, .NET
+                      strong FPGA tools:
+                    p VHDL, Altera Quartus, ModelSim for simmulation
                     li 
-                      strong Database:
-                    p Elastic (ELK stack), SQL, NoSQL, mongoDB, PostgreSQL 
+                      strong Embeded systems:
+                    p Linux/RTOS, UARTs, A/D and D/A converters, timers, PWM generation from a timer, real-time clocks, Understanding of Memories(RAM, ROM, Flash)
+                      | Communications using RS-232 (and it’s variants), SPI, I2C, and parallel data ports.
                     li 
-                      strong Automations: 
-                    p Webpack, Gulp, Travis CLI, Jenkins, Powershell/Bash scripting, Selenium
-                    li 
-                      strong Cloud services:
-                    p AWS, IBM Bluemix, Azure, Heroku 
-                    li 
-                      strong Others: 
-                    p RESt, GraphQL, ngix, Appache tomcat, Data Structures and Algorithms, Multi Threading
+                      strong Electronics: 
+                    p Soldering, Circuit layout(Circuit maker, Eagle), Circuit simmulation(LT spice), Oscilloscope, Digital Multi Meter
+                    
               article
                 span.icon.fa-rocket
                 .content
