Organized a pug templates

--- a/views/components/bodyMain.pug
+++ b/views/components/bodyMain.pug
@@ -1,261 +1,16 @@
 body.is-preload
-    // Wrapper
-    #wrapper
-      // Main
-      #main
-        .inner
-          // Header
-          header#header
-            a.logo(href="index.html")
-              strong About
-              |  Yagnik
-            ul.icons
-              li
-                a.icon.fa-facebook(href="#")
-                  span.label Facebook
-              li
-                a.icon.fa-instagram(href="#")
-                  span.label Instagram
-              li
-                a.icon.fa-medium(href="#")
-                  span.label Medium
-          // Banner
-          section#banner
-            .content
-              header
-                h1
-                  | Hi, I'm Yagnik 
-                p Enthusiastic | Impactfull | Problem solver
-              p
-                | Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.
-              //- ul.actions
-              //-   li
-              //-     a.button.big(href="#") Learn More
-            span
-              img.myImg(src="../img/myImg.png" alt="myImage")
-          
-          // Section  
-          section
-            header.major
-              h2 Summery Of Skills
-            .features
-              article
-                span.icon.fa-diamond
-                .content.summery
-                  h3 Software
-                  ul  
-                    li 
-                      strong Programming Language: 
-                    p Javascript, C/C++, JAVA, C#, Python, Swift 4, WEB assembly, Perl, HTML, CSS
-                    li 
-                      strong Framework/Platforms:
-                    p AngularJS, Angular2+, React, React Native, Node, Express, .NET
-                    li 
-                      strong Database:
-                    p Elastic (ELK stack), SQL, NoSQL, mongoDB, PostgreSQL 
-                    li 
-                      strong Automations: 
-                    p Webpack, Gulp, Travis CLI, Jenkins, Powershell/Bash scripting, Selenium
-                    li 
-                      strong Cloud services:
-                    p AWS, IBM Bluemix, Azure, Heroku 
-                    li 
-                      strong Others: 
-                    p RESt, GraphQL, ngix, Appache tomcat, Data Structures and Algorithms, Multi Threading, Dynatrace
-
-              article
-                span.icon.fa-paper-plane
-                .content.summery
-                  h3 Hardware
-                  ul  
-                    li 
-                      strong Firmware programming: 
-                    p C, BG SCRIPT(BGM111 BLE chip), ARM/x86 assembly, Rust
-                    li 
-                      strong FPGA tools:
-                    p VHDL, Altera Quartus, ModelSim for simmulation
-                    li 
-                      strong Embeded systems:
-                    p Linux/RTOS, UARTs, A/D and D/A converters, timers, PWM generation from a timer, real-time clocks, Understanding of Memories(RAM, ROM, Flash)
-                      | Communications using RS-232 (and it’s variants), SPI, I2C, and parallel data ports.
-                    li 
-                      strong Electronics: 
-                    p Soldering, Circuit layout(Circuit maker, Eagle), Circuit simmulation(LT spice), Oscilloscope, Digital Multi Meter
-                    
-              article
-                span.icon.fa-rocket
-                .content
-                  h3 Project Managment
-                  p
-                    | Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-              article
-                span.icon.fa-signal
-                .content
-                  h3 Others
-                  p
-                    | Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-          //Section for work experince
-          section
-            header.major
-              h2 Proffesional Work Experince
-              .row
-
-          // Section
-          section
-            header.major
-              h2 Projects
-            .posts
-              article
-                a.image(href="#")
-                  img(src="../img/pic01.jpg" alt="")
-                h3 Interdum aenean
-                p
-                  | Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                ul.actions
-                  li
-                    a.button(href="#") More
-              article
-                a.image(href="#")
-                  img(src="../img/pic02.jpg" alt="")
-                h3 Nulla amet dolore
-                p
-                  | Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                ul.actions
-                  li
-                    a.button(href="#") More
-              article
-                a.image(href="#")
-                  img(src="../img/pic03.jpg" alt="")
-                h3 Tempus ullamcorper
-                p
-                  | Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                ul.actions
-                  li
-                    a.button(href="#") More
-              article
-                a.image(href="#")
-                  img(src="../img/pic04.jpg" alt="")
-                h3 Sed etiam facilis
-                p
-                  | Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                ul.actions
-                  li
-                    a.button(href="#") More
-              article
-                a.image(href="#")
-                  img(src="../img/pic05.jpg" alt="")
-                h3 Feugiat lorem aenean
-                p
-                  | Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                ul.actions
-                  li
-                    a.button(href="#") More
-              article
-                a.image(href="#")
-                  img(src="../img/pic06.jpg" alt="")
-                h3 Amet varius aliquam
-                p
-                  | Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                ul.actions
-                  li
-                    a.button(href="#") More
-      // Sidebar
-      #sidebar
-        .inner
-          // Search
-          section#search.alt
-            form(method="post" action="#")
-              input#query(type="text" name="query" placeholder="Search")
-          // Menu
-          nav#menu
-            header.major
-              h2 Menu
-            ul
-              li
-                a(href="index.html") Homepage
-              li
-                a(href="generic.html") Generic
-              li
-                a(href="elements.html") Elements
-              li
-                span.opener Submenu
-                ul
-                  li
-                    a(href="#") Lorem Dolor
-                  li
-                    a(href="#") Ipsum Adipiscing
-                  li
-                    a(href="#") Tempus Magna
-                  li
-                    a(href="#") Feugiat Veroeros
-              li
-                a(href="#") Etiam Dolore
-              li
-                a(href="#") Adipiscing
-              li
-                span.opener Another Submenu
-                ul
-                  li
-                    a(href="#") Lorem Dolor
-                  li
-                    a(href="#") Ipsum Adipiscing
-                  li
-                    a(href="#") Tempus Magna
-                  li
-                    a(href="#") Feugiat Veroeros
-              li
-                a(href="#") Maximus Erat
-              li
-                a(href="#") Sapien Mauris
-              li
-                a(href="#") Amet Lacinia
-          // Section
-          section
-            header.major
-              h2 Ante interdum
-            .mini-posts
-              article
-                a.image(href="#")
-                  img(src="../img/pic07.jpg" alt="")
-                p Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.
-              article
-                a.image(href="#")
-                  img(src="../img/pic08.jpg" alt="")
-                p Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.
-              article
-                a.image(href="#")
-                  img(src="../img/pic09.jpg" alt="")
-                p Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.
-            ul.actions
-              li
-                a.button(href="#") More
-          // Section
-          section
-            header.major
-              h2 Get in touch
-            p
-              | Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-            ul.contact
-              li.fa-envelope-o
-                a(href="#") information@untitled.tld
-              li.fa-phone (000) 000-0000
-              li.fa-home
-                | 1234 Somewhere Road #8254
-                br
-                | 										Nashville, TN 00000-0000
-          // Footer
-          footer#footer
-            p.copyright
-              | © Untitled. All rights reserved. Demo ../img: 
-              a(href="https://unsplash.com") Unsplash
-              | . Design: 
-              a(href="https://html5up.net") HTML5 UP
-              | .
-    // Scripts
-    script(src="https://code.jquery.com/jquery-3.3.1.min.js",integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=",crossorigin="anonymous")
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/bowser/1.9.3/bowser.min.js", crossorigin="anonymous")
-    //- script(src="assets/js/jquery.min.js")
-    //- script(src="assets/js/browser.min.js")
-    //- script(src="assets/js/breakpoints.min.js")
-    //- script(src="assets/js/util.js")
-    //- script(src="assets/js/main.js")
+	// Wrapper
+	#wrapper
+		// Main
+		#main
+			.inner
+				include ./header
+				include ./banner
+				include ./Summery-skills
+				include ./work
+				include ./projects
+		// Sidebar
+		include ./sidebar
+	// Scripts
+	script(src="https://code.jquery.com/jquery-3.3.1.min.js",integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=",crossorigin="anonymous")
+	script(src="https://cdnjs.cloudflare.com/ajax/libs/bowser/1.9.3/bowser.min.js", crossorigin="anonymous")
