Added work experience

--- a/views/components/work.pug
+++ b/views/components/work.pug
@@ -1,4 +1,32 @@
 section
     header.major
         h2 Proffesional Work Experince
-            .row
+    .posts
+        article
+            a.image(href="#")
+                img(src="../img/rbc-royal-bank.svg" alt="")
+            h3 Software Devloper at RBC
+            ul 
+                li Migrated entire front end project written in 
+                    strong AngularJS to Angular 6.
+                    |  Helped project to keep up with the standard upto date libraries and technogies. 
+                li Created automation scripts and task using bash and grunt for initial migration of project which resulted saving 
+                    strong 10 minutes 
+                    | each time project is run.
+                li Used Webpack 4 for bundling project for development and production.
+                li Identified issues in code base and created fixes on regular bases. 
+        article
+            a.image(href="#")
+                img(src="../img/techstars-logo.jpg" alt="")
+            h3 Hardware Engineer at Cuepath (Techstarts'17)
+            ul 
+                li Migrated entire front end project written in 
+                    strong AngularJS to Angular 6.
+                    |  Helped project to keep up with the standard upto date libraries and technogies. 
+                li Created automation scripts and task using bash and grunt for initial migration of project which resulted saving 
+                    strong 10 minutes 
+                    | each time project is run.
+                li Used Webpack 4 for bundling project for development and production.
+                li Identified issues in code base and created fixes on regular bases. 
+                
+                
