Added a timeline for work experience

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -50,6 +50,7 @@
 	@import 'components/mini-posts';
 	@import 'components/features';
 	@import 'components/posts';
+	@import 'components/timeline';
 
 // Layout.
 
@@ -60,6 +61,7 @@
 	@import 'layout/banner';
 	@import 'layout/footer';
 	@import 'layout/menu';
+	
 
 	//general css
 	.summery {
