--- a/views/components/work.pug
+++ b/views/components/work.pug
@@ -1,32 +1,64 @@
 section
-    header.major
-        h2 Proffesional Work Experince
-    .posts
-        article
-            a.image(href="#")
-                img(src="../img/rbc-royal-bank.svg" alt="")
-            h3 Software Devloper at RBC
-            ul 
-                li Migrated entire front end project written in 
-                    strong AngularJS to Angular 6.
-                    |  Helped project to keep up with the standard upto date libraries and technogies. 
-                li Created automation scripts and task using bash and grunt for initial migration of project which resulted saving 
-                    strong 10 minutes 
-                    | each time project is run.
-                li Used Webpack 4 for bundling project for development and production.
-                li Identified issues in code base and created fixes on regular bases. 
-        article
-            a.image(href="#")
-                img(src="../img/techstars-logo.jpg" alt="")
-            h3 Hardware Engineer at Cuepath (Techstarts'17)
-            ul 
-                li Migrated entire front end project written in 
-                    strong AngularJS to Angular 6.
-                    |  Helped project to keep up with the standard upto date libraries and technogies. 
-                li Created automation scripts and task using bash and grunt for initial migration of project which resulted saving 
-                    strong 10 minutes 
-                    | each time project is run.
-                li Used Webpack 4 for bundling project for development and production.
-                li Identified issues in code base and created fixes on regular bases. 
-                
-                
+	header
+		h2 Professional Work Experience
+	.timeline
+
+			// RBC work experience  
+			.entry
+				.title
+					a.image(href="#")
+						img.companyImg(src="../img/rbc-royal-bank.svg" alt="")
+						h3 2018, May - Present
+					p Software Developer, RBC, Toronto
+				.body
+					ul
+						li Migrated entire front end project written in 
+							strong AngularJS to Angular 6.
+							|  Helped project to keep up with the standard up to date libraries and technologies. 
+						li Created automation scripts and task using bash and grunt for initial migration of project which resulted 
+							strong saving 10 minutes 
+							| each time project is run.
+						li Used Webpack 4 for bundling project for development and production.
+						li Identified issues in code base and created fixes on regular bases. 
+
+			//RBC community leader experience 
+			.entry
+				.title
+					a.image(href="#")
+						img.companyImg(src="../img/rbc-royal-bank.svg" alt="")
+						h3 2018, May - Present
+					p Community Leader 
+						br
+						| (Technology & Operation), RBC, Toronto
+				.body
+					ul
+						li Rerum sit libero possimus amet excepturi
+						li Exercitationem enim dolores sunt praesentium dolorum praesentium
+						li Modi aut dolores dignissimos sequi sit ut aliquid molestias deserunt illo
+			//Cuepath Hardware Engineer experience 
+			.entry
+				.title
+					a.image(href="#")
+						img.companyImg(src="../img/cuepath.svg" alt="")
+						h3 2018, May - Present
+					p  Hardware Engineer
+						br
+						|  Cuepath (Techstars'17), Vancouver|Seattle 
+				.body
+					ul
+						li Designed and developed a solution that resulted in  
+							strong reducing 
+							| custom hardware programming 
+							strong time by 90%. 
+							| Automated full system of programming custom hardware.
+						li Designed and created 
+							strong Remote Device Management System 
+							| that helps connect to any Internet of Things (IoT) device, 
+							| debug it remotely with 
+							strong SSH connection 
+							| and Remote calls via cloud platform, 
+							| track its details and status.
+						li Battery level monitoring system for custom hardware. It 
+							strong benefited to approximate the battery life time 
+							| and 
+							strong gather battery monitoring data. 
