Added work experiences

--- a/views/components/work.pug
+++ b/views/components/work.pug
@@ -6,7 +6,7 @@ section
 			// RBC work experience  
 			.entry
 				.title
-					a.image(href="#")
+					a.image(href="/rbcWork.html")
 						img.companyImg(src="../img/rbc-royal-bank.svg" alt="")
 						h3 2018, May - Present
 					p Software Developer, RBC, Toronto
@@ -24,7 +24,7 @@ section
 			//RBC community leader experience 
 			.entry
 				.title
-					a.image(href="#")
+					a.image(href="rbcWork.html")
 						img.companyImg(src="../img/rbc-royal-bank.svg" alt="")
 						h3 2018, May - Present
 					p Community Leader 
@@ -35,10 +35,29 @@ section
 						li Rerum sit libero possimus amet excepturi
 						li Exercitationem enim dolores sunt praesentium dolorum praesentium
 						li Modi aut dolores dignissimos sequi sit ut aliquid molestias deserunt illo
-			//Cuepath Hardware Engineer experience 
+
+			//CJSF Radio experience 
 			.entry
 				.title
 					a.image(href="#")
+						img.companyImg(src="../img/cjsf.png" alt="")
+						h3 2018, Jan - 2018, Jun
+					p  Mobile Application Developer
+						br
+						|  CJSF 90.1 FM, Vancouver 
+				.body
+					ul
+						li Designed, planned and researched features and requirements of radio station app in the team of 3 developers.
+						li Researched technologies and made decision to develop React-Native application.
+						li Created UI mock ups and assigned tasks to other members of teams. 
+						li Developed first version of application in short period of time. 
+						li Made a testing plan for the application. 
+						li Deployed app on the play store.
+
+			//Cuepath Hardware Engineer experience 
+			.entry
+				.title
+					a.image(href="/cuepathWork.html")
 						img.companyImg(src="../img/cuepath.svg" alt="")
 						h3 2018, May - Present
 					p  Hardware Engineer
@@ -62,3 +81,20 @@ section
 							strong benefited to approximate the battery life time 
 							| and 
 							strong gather battery monitoring data. 
+
+			//SFU RA experience 
+			.entry
+				.title
+					a.image(href="#")
+						img.companyImg(src="../img/sfu-plain.svg" alt="")
+						h3 2016, Aug - 2017, Jan
+					p  Research Assistant On Internet Of Things
+						br
+						|  SFU applied science, Burnaby 
+				.body
+					ul
+						li Developed various IoT(Internet of Things) prototypes with the help of raspberry pi and other 
+							| primary sensors to understand the difficulties of the development process. 
+						li Automated a tasks using Linux Cron jobs scripts. 
+						li Wrote node js server side scripts to communicate between IoT device and cloud.
+						li Gathered requirements for a prototype of a cloud service that could serve simple solution to IoT development.
