Added educaiton, awards and contact me

--- a/views/components/Summery-skills.pug
+++ b/views/components/Summery-skills.pug
@@ -53,21 +53,21 @@ section
             .content
                 h3 Others 
                 ul 
-                    li Solid understading of 
+                    li Solid understanding of 
                       strong Data structures and algorithms.
-                    li Software development methodolgies (
+                    li Software development methodologies (
                       strong Agile, TDD, XP 
                       | )
                     li Experience in 
-                      strong Internet of Things(IoT) and Real time embeded systems. 
+                      strong Internet of Things(IoT) and Real time embedded systems. 
                     li Understanding of Modern Computer Architecture, 
-                      strong Thread managment 
+                      strong Thread Management 
                       | and programming 
 
         article
             span.icon.fa-signal
             .content
-                h3 Project Managment
+                h3 Project Management
                 ul 
                     li JIRA, Github
                     li 
