--- a/views/components/bodyMain.pug
+++ b/views/components/bodyMain.pug
@@ -9,6 +9,10 @@ body.is-preload
 				include ./Summery-skills
 				include ./work
 				include ./projects
+				include ./nonTechWork
+				include ./education
+				include ./awards
+				include ./contactMe
 		// Sidebar
 		include ./sidebar
 	// Scripts
