Added timeline for the projects

--- a/views/components/work.pug
+++ b/views/components/work.pug
@@ -2,12 +2,11 @@ section
 	header
 		h2 Professional Work Experience
 	.timeline
-
 			// RBC work experience  
 			.entry
 				.title
 					a.image(href="/rbcWork.html")
-						img.companyImg(src="../img/rbc-royal-bank.svg" alt="")
+						img.companyImg(src="../img/rbc-royal-bank.svg" alt="rbc logo")
 						h3 2018, May - Present
 					p Software Developer, RBC, Toronto
 				.body
@@ -21,11 +20,11 @@ section
 						li Used Webpack 4 for bundling project for development and production.
 						li Identified issues in code base and created fixes on regular bases. 
 
-			//RBC community leader experience 
+			//RBC community leader experience
 			.entry
 				.title
 					a.image(href="rbcWork.html")
-						img.companyImg(src="../img/rbc-royal-bank.svg" alt="")
+						img.companyImg(src="../img/rbc-royal-bank.svg" alt="rbc logo")
 						h3 2018, May - Present
 					p Community Leader 
 						br
@@ -40,7 +39,7 @@ section
 			.entry
 				.title
 					a.image(href="#")
-						img.companyImg(src="../img/cjsf.png" alt="")
+						img.companyImg(src="../img/cjsf.png" alt="CJSF radio logo")
 						h3 2018, Jan - 2018, Jun
 					p  Mobile Application Developer
 						br
@@ -58,7 +57,7 @@ section
 			.entry
 				.title
 					a.image(href="/cuepathWork.html")
-						img.companyImg(src="../img/cuepath.svg" alt="")
+						img.companyImg(src="../img/cuepath.jpg" alt="CuePath Logo")
 						h3 2018, May - Present
 					p  Hardware Engineer
 						br
@@ -86,7 +85,7 @@ section
 			.entry
 				.title
 					a.image(href="#")
-						img.companyImg(src="../img/sfu-plain.svg" alt="")
+						img.companyImg(src="../img/sfu-plain.svg" alt="sfu logo")
 						h3 2016, Aug - 2017, Jan
 					p  Research Assistant On Internet Of Things
 						br
