--- a/styles/main.scss
+++ b/styles/main.scss
@@ -51,6 +51,7 @@
 	@import 'components/features';
 	@import 'components/posts';
 	@import 'components/timeline';
+	@import 'components/projects';
 
 // Layout.
 
