--- a/views/components/projects.pug
+++ b/views/components/projects.pug
@@ -1,58 +1,34 @@
 section
-            header.major
-              h2 Projects
-            .posts
-              article
-                a.image(href="#")
-                  img(src="../img/pic01.jpg" alt="")
-                h3 Interdum aenean
-                p
-                  | Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                ul.actions
-                  li
-                    a.button(href="#") More
-              article
-                a.image(href="#")
-                  img(src="../img/pic02.jpg" alt="")
-                h3 Nulla amet dolore
-                p
-                  | Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                ul.actions
-                  li
-                    a.button(href="#") More
-              article
-                a.image(href="#")
-                  img(src="../img/pic03.jpg" alt="")
-                h3 Tempus ullamcorper
-                p
-                  | Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                ul.actions
-                  li
-                    a.button(href="#") More
-              article
-                a.image(href="#")
-                  img(src="../img/pic04.jpg" alt="")
-                h3 Sed etiam facilis
-                p
-                  | Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                ul.actions
-                  li
-                    a.button(href="#") More
-              article
-                a.image(href="#")
-                  img(src="../img/pic05.jpg" alt="")
-                h3 Feugiat lorem aenean
-                p
-                  | Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                ul.actions
-                  li
-                    a.button(href="#") More
-              article
-                a.image(href="#")
-                  img(src="../img/pic06.jpg" alt="")
-                h3 Amet varius aliquam
-                p
-                  | Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                ul.actions
-                  li
-                    a.button(href="#") More
+	header.major
+		h3 Projects 
+	.timeline-projects
+		.container-projects.left-projects
+			.content-projects
+				h2 2017
+				p
+					| Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.
+		.container-projects.right-projects
+			.content-projects
+				h2 2016
+				p
+					| Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.
+		.container-projects.left-projects
+			.content-projects
+				h2 2015
+				p
+					| Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.
+		.container-projects.right-projects
+			.content-projects
+				h2 2012
+				p
+					| Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.
+		.container-projects.left-projects
+			.content-projects
+				h2 2011
+				p
+					| Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.
+		.container-projects.right-projects
+			.content-projects
+				h2 2007
+				p
+					| Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.
