Changed cuepath logo

--- a/views/components/work.pug
+++ b/views/components/work.pug
@@ -39,7 +39,7 @@ section
 			.entry
 				.title
 					a.image(href="#")
-						img.companyImg(src="../img/cjsf.png" alt="CJSF radio logo")
+						img.companyImg(src="../img/cjsf-long.png" alt="CJSF radio logo")
 						h3 2018, Jan - 2018, Jun
 					p  Mobile Application Developer
 						br
