--- a/views/components/projects.pug
+++ b/views/components/projects.pug
@@ -4,31 +4,68 @@ section
 	.timeline-projects
 		.container-projects.left-projects
 			.content-projects
-				h2 2017
-				p
-					| Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.
+				h2 2018 Summer 
+				ul 
+					li  Personal 
+						a(href="https://github.com/yvadher/webPortfolio") Web Portfolio
+					li npm module 
+
 		.container-projects.right-projects
 			.content-projects
-				h2 2016
-				p
-					| Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.
+				h2 2018 Spring 
+				ul 
+					li  Personal 
+						a(href="https://github.com/yvadher/webPortfolio") Web Portfolio
+
 		.container-projects.left-projects
 			.content-projects
-				h2 2015
-				p
-					| Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.
+				h2 2017 Fall 
+				
+				.post
+					article
+						.flex-container
+							a.image(href="#")
+								img.projectImg(src="../img/pic01.jpg" alt="")
+							a.image(href="#")
+								img.projectImg(src="../img/pic02.jpg" alt="")
+						h3 Interdum aenean
+						p
+							| Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
+						ul.actions
+							li
+								a.button(href="#") More
+
 		.container-projects.right-projects
 			.content-projects
-				h2 2012
-				p
-					| Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.
+				h2 2017 Summer 
+				ul 
+					li  Personal 
+						a(href="https://github.com/yvadher/webPortfolio") Web Portfolio
+
 		.container-projects.left-projects
 			.content-projects
-				h2 2011
-				p
-					| Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.
+				h2 2017 Spring 
+				ul 
+					li  Personal 
+						a(href="https://github.com/yvadher/webPortfolio") Web Portfolio
+
 		.container-projects.right-projects
 			.content-projects
-				h2 2007
-				p
-					| Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.
+				h2 2016 Fall 
+				ul 
+					li  Personal 
+						a(href="https://github.com/yvadher/webPortfolio") Web Portfolio
+
+		.container-projects.left-projects
+			.content-projects
+				h2 2016 Summer 
+				ul 
+					li  Personal 
+						a(href="https://github.com/yvadher/webPortfolio") Web Portfolio
+
+		.container-projects.right-projects
+			.content-projects
+				h2 2016 Spring 
+				ul 
+					li  Personal 
+						a(href="https://github.com/yvadher/webPortfolio") Web Portfolio
